--- a/IronicSA/IronicSA/IronicSA.csproj
+++ b/IronicSA/IronicSA/IronicSA.csproj
@@ -88,8 +88,9 @@
       <Name>SVM</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="data\" />
+    <Content Include="data\tweetdata.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
